feat: Implement comprehensive /update command system (Phases 1-6)
🚀 Complete implementation of enterprise-grade user data update system with
context-aware routing, bidirectional sync, and comprehensive validation.

## Phase 1: Model Cleanup & Enhancement
- Split emergency_contact field into emergency_contact_name and emergency_contact_phone
- Enhanced Player and TeamMember entities with backward compatibility
- Added proper legacy data parsing with regex patterns
- Maintained full backward compatibility for existing data

## Phase 2: Field Validation Service
- Created comprehensive FieldValidator with multi-layered validation
- XSS and injection protection with suspicious pattern detection
- Entity-aware validation (player vs team member specific rules)
- UK phone number validation with international considerations
- Email, position, role, and medical notes validation

## Phase 3: Bidirectional Sync Service
- Implemented LinkedRecordSyncService for Player ⟷ TeamMember synchronization
- Atomic operations with rollback capability for failed syncs
- Smart field mapping for common fields (phone, email, emergency contacts)
- Comprehensive sync result tracking and error handling

## Phase 4: Player Update Tools (4 async tools)
- update_player_field: Single field updates with validation
- update_player_multiple_fields: Batch field updates in single operation
- get_player_update_help: Context-aware help and field documentation
- get_player_current_info: Current player information display
- Integrated field validation and bidirectional sync

## Phase 5: Team Member Update Tools (5 async tools)
- update_team_member_field: Single field updates with role-based access
- update_team_member_multiple_fields: Batch updates for team members
- get_team_member_update_help: Team member specific help system
- get_team_member_current_info: Current team member information display
- update_other_team_member: Admin-only operations for managing other members
- Enhanced role-based access contr

--- a/kickai/config/agents.yaml
+++ b/kickai/config/agents.yaml
@@ -208,6 +208,7 @@ agents:
       - **Approvals**: `approve_player(telegram_id, team_id, username, chat_type, player_id)` - Leadership approval workflows
       - **Combined Views**: `list_team_members_and_players(telegram_id, team_id, chat_type)` - Team overview
       - **Communications**: `send_message()` - Player-specific communications
+      - **Player Updates**: `update_player_field()` - Single field updates, `update_player_multiple_fields()` - Multiple field updates, `get_player_update_help()` - Update guidance, `get_player_current_info()` - Current info display
 
       ### Workflow
       1.  Determine the specific player management task required
@@ -233,6 +234,11 @@ agents:
       - approve_player
       - list_team_members_and_players
       - send_message
+      # Player update tools (Phase 4)
+      - update_player_field
+      - update_player_multiple_fields
+      - get_player_update_help
+      - get_player_current_info
     primary_entity_type: "player"
     entity_types: ["player", "team_member"]
 
@@ -264,6 +270,7 @@ agents:
       - **Promotions**: `promote_team_member_to_admin(telegram_id, team_id, username, chat_type, member_id)` - Promote to admin
       - **Team Setup**: `create_team(telegram_id, team_id, username, chat_type, team_name, admin_user_id)` - Create new teams
       - **Communications**: `send_message()`, `send_announcement()` - Administrative communications
+      - **Member Updates**: `update_team_member_field()` - Single field updates, `update_team_member_multiple_fields()` - Multiple field updates, `get_team_member_update_help()` - Update guidance, `get_team_member_current_info()` - Current info display, `update_other_team_member()` - Admin operations
 
       ### Workflow
       1.  Identify the administrative task required
@@ -315,6 +322,12 @@ agents:
       - send_message
       - send_announcement
       - add_player
+      # Team member update tools (Phase 5)
+      - update_team_member_field
+      - update_team_member_multiple_fields
+      - get_team_member_update_help
+      - get_team_member_current_info
+      - update_other_team_member
     primary_entity_type: "team_member"  
     entity_types: ["team_member"]
 
